<resources>
    <string name="app_name">Tic Tac Toe</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="X">X</string>
    <string name="O">O</string>
    <string name="reset">Restart</string>
    <string name="title_activity_mode_select">ModeSelectActivity</string>

    <string name="single_player">Single Player</string>
    <string name="multi_player">Multi Player</string>
    <string name="title_activity_single_player">SinglePlayerActivity</string>
    <string name="title_activity_first_move_select">FirstMoveSelectActivity</string>

    <string name="player_moves">I Move First</string>
    <string name="android_moves">Android Moves First</string>
</resources>
