<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4da64d"
    android:orientation="vertical"
    tools:context="com.ugabuga.zitu.myapplication.ModeSelectActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="9"
            android:gravity="center"
            >
            <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textSize="50sp"
                android:textColor="#FFFFFF"
                android:typeface="serif"

                />

        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/OnePlayer"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/single_player"
                    android:clickable="true"
                    android:onClick="singlePlayerClicked"
                    android:typeface="serif"
                     />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/TwoPlayer"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/multi_player"
                    android:onClick="multiPlayerClicked"
                    android:typeface="serif"
                     />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_weight="3"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            >

        </TableRow>

    </TableLayout>





</LinearLayout>
