<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#4169e1"

    tools:context="com.ugabuga.zitu.myapplication.FirstMoveSelectActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="12"
            android:gravity="center"
            >
            <TextView
                android:text="@string/single_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textSize="50sp"
                android:textColor="#FFFFFF"
                android:typeface="serif"

                />

        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/OnePlayer"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/buttonshape"
                    android:textColor="#FFFFFF"
                    android:layout_weight="3"
                    android:text="@string/player_moves"
                    android:clickable="true"
                    android:onClick="playerMovesClicked"
                    android:typeface="serif"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/TwoPlayer"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@drawable/buttonshape"
                    android:textColor="#FFFFFF"
                    android:text="@string/android_moves"
                    android:onClick="androidMovesClicked"
                    android:typeface="serif"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_weight="5"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            >

        </TableRow>

    </TableLayout>

</LinearLayout>
